Added main header links

--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ h4 {
 
 .icon-small {
     font-size: 1.25em;
-    margin: auto;
+    margin-left: auto;
 }
 
 .icon-large {
@@ -230,6 +230,11 @@ h4 {
     display: flex;
     gap: 1em;
     transition: var(--trans-color);
+}
+
+.mini-text {
+    font-size: var(--font-smaller);
+    color: var(--light-text-color);
 }
 
 
@@ -391,6 +396,118 @@ nav .fly-item {
 
 
 
+/* ---- Header ----
+ * c. Header Main, departments category
+ * -----------------*/
+
+ .header-main {
+    background-color: var(--secondary-dark-color);
+    padding: 1.5em 0;
+    margin-bottom: 2em;
+ }
+
+ .dpt-cat {
+    position: relative;
+    z-index: 10;
+ }
+
+ .dpt-cat .dpt-head {
+    position: relative;
+    width: 300px;
+    padding: 0.75em 1.5em;
+    background-color: var(--primary-color);
+    border-radius: 7px 7px 0 0;
+    color: var(--white-color);
+    margin-bottom: -2.15em;
+ }
+
+.dpt-cat .dpt-head .mini-text {
+    color: var(--light-bg-color);
+}
+
+.dpt-cat .dpt-trigger {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 1.3em;
+    height: 60px;
+    width: 60px;
+}
+
+.dpt-menu > ul > li > a {
+    font-size: var(--font-small);
+    height: 46px;
+    align-items: center;
+} 
+
+.dpt-menu .has-child:hover ul { 
+    display: block;
+}
+
+.dpt-menu .has-child li a:hover {
+    text-decoration: underline;
+}
+
+/* ---- Header ----
+ * d. Search form
+ * -----------------*/
+
+.header-main .right {
+    flex: 1;
+}
+
+form {
+    position: relative;
+}
+
+form.search input {
+    line-height: 3.25em;
+    padding: 0 7em 0 4.5em;
+    border: 0;
+    outline: 0;
+    width: var(--percent100);
+    border-radius: 7px;
+    font-size: 0.9em;
+    font-weight: var(--fw3);
+}
+
+form.search :where(span,button) {
+    position: absolute;
+    top: 0;
+    padding: 0.55em 1.5em;
+    font-size: 1em;
+    color: var(--light-text-color);
+    height: var(--percent100);
+}
+
+form.search button {
+    right: 0;
+    border: 0;
+    outline: 0;
+    font-size: 0.875em;
+    font-weight: var(--fw6);
+    background-color: var(--primary-color);
+    color: var(--white-color);
+    border-radius: 0 7px 7px 0;
+    cursor: pointer;
+    transition: var(--trans-background);
+}
+
+form.search button:hover {
+    background-color: var(--dark-color);
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* ----------------------
@@ -507,4 +624,87 @@ nav .fly-item {
         text-align: center;
         color: var(--secondary-dark-color);
     }
+
+    .header-main .right {
+        max-width: 600px;
+        margin-left: auto;
+    }
+
+    /* Departments menu */
+    .dpt-menu {
+        position: absolute;
+        top: var(--percent100);
+        width: 300px;
+        background-color: var(--white-color);
+        border: 1px solid var(--border-color);
+        border-top: 0;
+        border-bottom: 0;
+    }
+
+    .dpt-menu > ul > li > a {
+        font-weight: var(--fw5);
+        padding: 0 1.5em;
+        border-bottom: 1px solid var(--border-color);
+    }
+
+    .dpt-menu .has-child > ul, .dpt-menu .mega {
+        position: absolute;
+        top: 0;
+        left: var(--percent100);
+        width: var(--percent100);
+        height: auto;
+        min-height: var(--percent100);
+        padding: 1.5em;
+        font-size: var(--font-small);
+        line-height: 2.5em;
+        border: 1px solid var(--border-color);
+        border-top: 0;
+        display: none;
+        background-position: right bottom;
+        background-repeat: no-repeat;
+        background-size: auto;
+    }
+
+    /* showing the first sub menu */
+    .dpt-menu .has-child:nth-child() .mega {
+        display: block;
+    }
+
+    .dpt-menu .beauty ul {
+        background-image: url(assets/menu/menu_bg1.jpg);
+    }
+
+    .dpt-menu .electronic ul {
+        background-image: url(assets/menu/menu_bg2.jpg);
+    }
+
+    .dpt-menu .fashion ul {
+        background-image: url(assets/menu/menu_bg3.jpg);
+    }
+
+    .dpt-menu .homekit .mega {
+        background-image: url(assets/menu/menu_bg4.jpg);
+    }
+
+    .dpt-menu .has-child > :where(ul,.mega)::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: linear-gradient(90deg, rgba(225,225,225,1) 0%, rgba(255, 255, 100, 0.1));
+    }
+
+    .dpt-menu .mega {
+        width: auto;
+        min-width: var(--percent100);
+    }
+
+    .dpt-menu .has-child:hover .mega {
+        display: flex;
+    }
+
+
+
 }
